# flow-sdk

./: Readme.md  flow_example.yaml  flow_sdk_quickstart.ipynb  my_auction_catalog.yaml  pyproject.toml  requirements.txt  setup.py
src/flow/: main.py
src/flow.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/flow/clients/: authenticator.py  fcp_client.py  foundry_client.py  storage_client.py
src/flow/config/: __init__.py  base_settings.py  flow_config.py  test_settings.py
src/flow/formatters/: base_formatter.py  table_formatter.py
src/flow/logging/: spinner_logger.py
src/flow/managers/: auction_finder.py  bid_manager.py  catalogue_manager.py  instance_manager.py  storage_manager.py  task_manager.py
src/flow/models/: __init__.py  auction.py  bid.py  bid_disk_attachment.py  bid_payload.py  bid_response.py  disk_attachment.py  instance.py  instance_type.py  project.py  ssh_key.py  storage_responses.py  user.py
src/flow/scripts/: generate_catalogue.py
src/flow/startup_script_builder/: startup_script_builder.py  startup_script_templates.yaml
src/flow/task_config/: __init__.py  config_parser.py  exceptions.py  logging_config.py  models.py
src/flow/utils/: exceptions.py  utils.py
tests/integration/test_clients/: test_fcp_client_integration.py  (+1 more)
tests/test_clients/: test_authenticator.py  test_fcp_client.py  test_foundry_client.py  test_storage_client.py
tests/test_config/: __init__.py  test_config_parser.py
tests/test_managers/: test_auction_finder.py  test_bid_manager.py  test_instance_manager.py  test_storage_manager.py
(+15 files in other folders)
